# dhyara

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  _c_make_lists_8txt.html  _l_i_c_e_n_s_e_8md.html  _r_e_a_d_m_e_8md.html  action_8h.html  action_8h__dep__incl.map  action_8h__dep__incl.md5  action_8h__incl.map  action_8h__incl.md5  action_8h_source.html  actions_2acknowledgement_8h.html  actions_2acknowledgement_8h__dep__incl.map  actions_2acknowledgement_8h__dep__incl.md5  actions_2acknowledgement_8h__incl.map  actions_2acknowledgement_8h__incl.md5  actions_2acknowledgement_8h_source.html  actions_2advertisement_8h.html  actions_2advertisement_8h__dep__incl.map  actions_2advertisement_8h__dep__incl.md5  actions_2advertisement_8h__incl.map  actions_2advertisement_8h__incl.md5  actions_2advertisement_8h_source.html  actions_2all_8h.html  actions_2all_8h__dep__incl.map  actions_2all_8h__dep__incl.md5  actions_2all_8h__incl.map  actions_2all_8h__incl.md5  actions_2all_8h_source.html  actions_2beacon_8h.html  actions_2beacon_8h__dep__incl.map  actions_2beacon_8h__dep__incl.md5  actions_2beacon_8h__incl.map  actions_2beacon_8h__incl.md5  actions_2beacon_8h_source.html  actions_2chunk_8h.html  actions_2chunk_8h__dep__incl.map  (+1058 more)
.github/ISSUE_TEMPLATE/: bug_report.md  custom-issue.md  feature_request.md
.github/workflows/: pages.yml
assets/: dhyara.css  routing.css
assets/fragments/: head.html
assets/min/: dhyara.css  head.html
assets/ui/: dhyara.css  index.html  routing.html
docs/: CMakeLists.txt  Doxyfile.in  LICENSE.md  examples.md  header.html  index.h  protocol.md  qtify.css  style.css
docs/source/: conf.py  index.rst
docs/source/pages/: actions.rst  examples.rst  license.rst  protocol.rst
docs/source/pages/modules/: communication.rst  dhyara.rst  index.rst  interface.rst  packets.rst  routing.rst  tools.rst
examples/dhyara-ex01/: CMakeLists.txt
examples/dhyara-ex01/main/: CMakeLists.txt  application.cpp  application.h  mainx.cpp
examples/dhyara-example-basic/: CMakeLists.txt
examples/dhyara-example-basic/main/: application.cpp  application.h
examples/dhyara-example-fast/: CMakeLists.txt
examples/dhyara-example-fast/main/: application.cpp  main.c
examples/dhyara-example-long/: partitions.csv
examples/dhyara-example-long/main/: main.c
examples/dhyara-example-ping/: CMakeLists.txt
examples/dhyara-example-ping/main/: application.cpp  application.h  main.c  mainx.cpp  mainx.h
examples/dhyara-example-traceroute/: CMakeLists.txt
examples/dhyara-example-traceroute/main/: application.cpp  main.c  mainx.cpp
examples/hello/: CMakeLists.txt
examples/hello-c/: CMakeLists.txt
examples/hello-c/main/: CMakeLists.txt  main.c  mainx.h
examples/hello-cxx/: partitions.csv
examples/hello-cxx/main/: CMakeLists.txt  main.c  mainx.cpp
examples/hello/main/: main.c  mainx.cpp
examples/minimal/: CMakeLists.txt  partitions.csv  sdkconfig.old
examples/minimal/main/: CMakeLists.txt  main.c
examples/multihop/: tools.sh
examples/multihop/main/: main.c
examples/multihop/results/: mcs4_lgi.csv  mcs4_sgi.csv  mcs5_lgi.csv  mcs5_sgi.csv  mcs6_lgi.csv  mcs6_lgi.ods  mcs6_sgi.csv  mcs7_lgi.csv  mcs7_sgi.csv  p2p.txt
includes/dhyara/: actions.h  address.h  assets.h  defs.h  dhyara.h  frame.h  link.h  neighbour.h  neighbourhood.h  network.h  packets.h  peer.h  routing.h  synchronizer.h  universe.h  wifi.h  xqueue.h
includes/dhyara/actions/: acknowledgement.h  action.h  advertisement.h  all.h  beacon.h  chunk.h  delivered.h  echo_lost.h  echo_reply.h  echo_request.h
includes/dhyara/cmd/: arg.hpp  chain.hpp  cmd.hpp  detail.hpp  fwd.hpp  man.hpp  operators.hpp  param.hpp  parse.hpp
includes/dhyara/detail/: args.hpp  args_helper.hpp
includes/dhyara/packets/: acknowledgement.h  advertisement.h  all.h  beacon.h  chunk.h  data.h  delivered.h  echo_lost.h  echo_reply.h  echo_request.h  io.h  packets.h  serialization.h  types.h
includes/dhyara/routing/: metric.h  next_hop.h  route.h  route_metric.h  table.h
includes/dhyara/services/: identify.h  phy_rate.h  ping.h  ping_impl.h  registry.hpp  routes.h  service.hpp  stream.h  universe.h
includes/dhyara/tools/: ping.h  traceroute.h
includes/dhyara/utils/: http.h  printer.h  services.h  udp_relay.h
includes/dhyara/utils/services/: ping.h  ping_impl.h  registry.hpp  service.hpp  stream.h
results/: hops.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+93 more)
sources/: address.cpp  dhyara.c  dhyara.cpp  frame.cpp  link.cpp  neighbour.cpp  neighbourhood.cpp  network.cpp  peer.cpp  routing.cpp  synchronizer.cpp  universe.cpp  wifi.c  wifi.cpp
sources/actions/: acknowledgement.cpp  advertisement.cpp  beacon.cpp  chunk.cpp  delivered.cpp  echo_lost.cpp  echo_reply.cpp  echo_request.cpp
sources/packets/: acknowledgement.cpp  advertisement.cpp  beacon.cpp  chunk.cpp  data.cpp  delivered.cpp  echo_lost.cpp  echo_reply.cpp  echo_request.cpp  io.cpp
sources/routing/: mertic.cpp  next_hop.cpp  route.cpp  route_mertic.cpp  table.cpp
sources/services/: identify.cpp  phy_rate.cpp  ping.cpp  ping_impl.cpp  routes.cpp  stream.cpp  universe.cpp
sources/tools/: ping.cpp  traceroute.cpp
sources/utils/: http.cpp  printer.cpp  services.cpp  udp_relay.cpp
sources/utils/services/: ping.cpp  ping_impl.cpp  stream.cpp
